--- a/Final.html
+++ b/Final.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <div class="overlay"></div> <!--Bacground de Fondo-->
+    <div class="overlay"></div> <!--Background de Fondo-->
     <div class="content">
         <img src="assets/img/Logo.png" alt="">
         <h1 class="titulo-inicio">Gracias por su respuesta.</h1>
